--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -1,9 +1,9 @@
 .countdownContainer {
   display: flex;
-  align-items: center;
-  font-family: Rajdhani;
   font-weight: 600;
+  align-items: center;
   color: var(--title);
+  font-family: Rajdhani;
 }
 
 .countdownContainer > div {
@@ -14,10 +14,10 @@
   justify-content: space-evenly;
 
   background-color: var(--white);
-  box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
   font-size: 8.5rem;
   text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
 }
 
 .countdownContainer > div span {
@@ -33,8 +33,8 @@
 }
 
 .countdownContainer > span {
-  font-size: 6.25rem;
   margin: 0 0.5rem;
+  font-size: 6.25rem;
 }
 
 .countdownButton {
@@ -50,15 +50,38 @@
   border: 0;
   border-radius: 5px;
 
-  background: var(--blue);
   color: var(--white);
+  background: var(--blue);
 
-  font-size: 1.25rem;
   font-weight: 600;
+  font-size: 1.25rem;
 
   transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
   background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+  color: var(--title);
+  background: var(--white);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+  color: var(--white);
+  background: var(--red);
+}
+
+.countdownButton:disabled {
+  color: var(--text);
+  cursor: not-allowed;
+  background: var(--white);
+  border-bottom: 4px solid var(--green);
+}
+
+.countdownIcon {
+  display: flex;
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
 }
